<resources>
    <string name="app_name">Islami</string>
    <string name="islami">إسلامي</string>
    <string name="nav_quran_text">القرآن</string>
    <string name="nav_hadeeth_text">الحديث</string>
    <string name="nav_sebha_text">السبحة</string>
    <string name="nav_radio_text">الراديو</string>
    <string name="sura_name">اسم السورة</string>
    <string name="sura_index">ترتيب السورة</string>
    <string name="count">عدد التسبيجات</string>
    <string name="tasbeeh">سبحان الله</string>
    <string name="_0">0</string>
    <string name="al_hadeeth">الأحاديث</string>
    <string name="go_back">go back</string>
    <string name="quran_radio">إذاعة القرآن الكريم</string>
    <string name="previous">previous</string>
    <string name="play">play</string>
    <string name="next">next</string>

    <array name="azkar">
        <item>سبحان الله</item>
        <item>الحمد الله</item>
        <item>لا إله إلا الله</item>
        <item>الله أكبر</item>
    </array>

</resources>