<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/sebha_body"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:src="@drawable/sebha_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sebha_head"
        android:layout_marginTop="-10dp"
         />

    <ImageView
        android:id="@+id/sebha_head"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:src="@drawable/sebha_head_image"
        app:layout_constraintEnd_toEndOf="@+id/sebha_body"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toStartOf="@+id/sebha_body"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="30sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/count"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/current_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sebha_body" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/current_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="8dp"
        android:textSize="30sp"
        android:backgroundTint="@color/count_bg"
        android:textColor="@color/text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sebha_body"
        android:text="@string/_0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/count_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="8dp"
        android:textColor="@color/tasbeeh_color"
        android:text="@string/tasbeeh"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/current_value"
        app:layout_constraintStart_toStartOf="@+id/current_value"
        app:layout_constraintTop_toBottomOf="@+id/current_value" />

</androidx.constraintlayout.widget.ConstraintLayout>